# PhotonMap

./: .gitignore
sw/: CMakeLists.txt  TestPhoton.cpp  algebra.h  main.cpp  misc.h  polyroots.cpp  scene.cpp  scene.h  wscript
sw/application/: main.cpp  photonKdTree.cpp  photonKdTree.h  wscript
sw/kdtree/: kdtree.h  timingstats.h
sw/lodepng/: wscript
sw/scene/: .lock-waf_linux2_build  Cube.cpp  Cube.h  Diagram1.dia.autosave  I_KdTree.h  I_PhotonMap.h  I_Scene.h  I_SceneObject.h  I_SceneRenderer.h  Light.cpp  Light.h  LightObject.cpp  LightObject.h  Material.cpp  Material.h  PhotonMap.cpp  PhotonMap.h  PhotonMappingSceneRenderer.cpp  PhotonMappingSceneRenderer.h  PhotonSceneRenderer.cpp  PhotonSceneRenderer.h  Pyramid.cpp  Pyramid.h  Quad.cpp  Quad.h  RasterSceneRenderer.cpp  RasterSceneRenderer.h  Ray.h  SceneFacade.cpp  SceneFacade.h  Sphere.cpp  Sphere.h  SurfacePoint.h  Triangle.cpp  Triangle.h  algebra.cpp  camera.cpp  camera.h  cornellBoxScene.cpp  cornellBoxScene.h  (+25 more)
sw/scene/kdtree/: kdtree.hxx
sw/scene/tests/: PhotonTest.h  SceneTest.h  TestPhoton.cpp  TestPhotonSceneRenderer.cpp  TestScene.cpp  tests.h  wscript
sw/src/: camera.cpp  material.h  photon.cpp  photon.h  scene.h  tests.cpp  wscript
sw/src/kdtree/: kdtest.cc  timingstats.cc
sw/src/lodepng/: wscript
sw/src/tests/: SceneTest.h  TestPhoton.cpp  TestScene.cpp  wscript
sw/test/: wscript
sw/tests/: TestPhoton.cpp  wscript
tools/workspace/: environment.bash  environment.bat  setup_workspace.py  waf.bat
